--- a/login-page/Welcome.html
+++ b/login-page/Welcome.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome page</title>
-	</head>
+    </head>
 	<body>
-		<h1 class="welcome">WELCOME %=request.getParameter("Username") %</h1>
-		<script src="index.js"></script>
+		<h1 id="welcome">WELCOME</h1>
+		<script src="rose.js"></script>
 	</body>
 </html>
