--- a/login-page/index.html
+++ b/login-page/index.html
@@ -10,25 +10,25 @@
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" src="rose.js"></script>
 </head>
 <body>
-	<form class="formlist" action="welcome.html">
+	<form class="formlist" id="myForm" action="Welcome.html">
 		<img class="top-i" src="images/logo.jpg"><br>
 		<label for="Username" >Username</label>
 		<!-- <span class="icon"><i class="fa fa-solid fa-user"></i></span> -->
-		<input type="text" class="fa fa-solid fa-user" id="Username" placeholder="&#xf007" name="Username" value=""><br>
+		<input type="text" class="fa fa-solid fa-user" id="Username" placeholder="&#xf007" name="Username"><br>
 		<label for="password">password</label><br>
 		<!-- <span class="icon"><i class=" fa fa-solid fa-lock"></i></span> -->
 		<input type="password" class="fa fa-solid fa-lock" id="password" placeholder="&#xf023"><br>
 		<span class="submit-ico">
 			<!-- <i class="fa fa-solid fa-right-to-bracket"></i> -->
-			<button type="submit" class="submit-ico fa fa-solid fa-right-to-bracket" onclick="nameDisplayCheck()"></button>
+			<button type="submit" class="submit-ico fa fa-solid fa-right-to-bracket"  onclick="nameDisplayCheck()"></button>
 		</span>
 		<ul>
 			<li class="fp">Forgot password?</li>
 			<li class="signup">Sign up</li>
 		</ul>
-		<script src="index.js"></script>
 	</form>
 </body>
 </html>
